# rpwdgen

./: Cargo.toml  LICENSE  README.md
src/: main.rs  wordlist.rs
