[package]
name = "rpwdgen"
version = "0.1.0"
authors = ["swilcox <swilcox@axialhealthcare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# structopt = { version = "0.3", default-features = false }
getopts = "0.2"
rand = "0.8.0"